--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
   "dependencies": {
+    "@rhds/elements": "^2.1.1",
     "lit": "^3.1.4"
   },
   "devDependencies": {
