--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@rhds/elements": "^2.1.1",
+    "@rhds/icons": "^1.1.2",
     "lit": "^3.1.4"
   },
   "devDependencies": {
